<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="50dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progress_circular"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:visibility="gone"
            android:elevation="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="90dp"
            android:background="@drawable/pawprints1"
            android:contentDescription="@string/popular_animal"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_cameraX"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/radius"
            android:gravity="center"
            android:text="@string/cameraX"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_gallery" />

        <Button
            android:id="@+id/btn_gallery"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/radius"
            android:gravity="center"
            android:text="@string/gallery"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView" />

        <Button
            android:id="@+id/btn_unggah"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/radius"
            android:gravity="center"
            android:text="@string/unggah"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_cameraX" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>