<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnPrimary"
    tools:context=".ui.home.HomeFragment">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="19dp"
            android:text="@string/welcome_back"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_welcome"
            android:layout_marginStart="35dp"
            android:layout_marginTop="5dp"
            android:text="@string/username"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </RelativeLayout>

    <ScrollView
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/relativeLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="35dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/popular_animal"
                android:textColor="?attr/colorOnSecondary"
                android:textStyle="bold"
                android:textSize="18sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_popular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:elevation="3dp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="600dp"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                app:cardCornerRadius="18dp"
                app:cardElevation="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_popular">

                <TextView
                    android:id="@+id/tv_news"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/news"
                    android:textColor="?attr/colorOnSecondary"
                    android:textStyle="bold"
                    android:textSize="18sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_news"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/item_news"
                    android:layout_marginTop="50dp"
                    android:paddingHorizontal="24dp"/>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

    <androidx.cardview.widget.CardView
        android:id="@+id/frameLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="-30dp"
        android:elevation="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/relativeLayout">

        <com.google.android.material.textfield.TextInputLayout
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            android:textColorHint="@color/gray">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_search"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/search"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="?attr/colorOnSecondary" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/search_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="16dp"
            android:elevation="1dp"
            android:src="@drawable/ic_baseline_search_24"
            android:contentDescription="@string/gambar_cari" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>